Fix dark background size on mobile

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -67,13 +67,7 @@ button:focus {outline:0;}
 }
 
 .main {
-    height: 75%;
     box-shadow: 0 4px 7px 0 rgba(50, 50, 50, 0.3);
-}
-
-.lt-bg {
-    height: 25%;
-    background-color: $white;
 }
 
 .gradient-bg {
